# CROWN

./: .gitignore  CMakeLists.txt  README.md  init.sh  run_bbH_ggH_local.py
analysis_configurations/tau/: config_vvvloose_tau.py
code_generation/: analysis_template.cxx  code_generation.py
data/pnn/: em_even_lowmass.h5  em_even_lowmass.hxx  em_odd_lowmass.h5  em_odd_lowmass.hxx  em_scaling.json  et_even_lowmass.h5  et_even_lowmass.hxx  (+13 more)
hmm/: generate.py  vhmm_config.py
include/: basefunctions.hxx  defaults.hxx  et_odd_lowmass.hxx  jets.hxx  lorentzvectors.hxx  mt_even_lowmass.hxx  pairselection.hxx  physicsobjects.hxx  quantities.hxx  reweighting.hxx  scalefactors.hxx  testmodel.hxx  triggers.hxx  tripleselection.hxx
pnn_evaluation/: CMakeLists.txt  README  higgs_analysis.cpp  higgs_analysis.err  higgs_analysis.out  higgs_analysis.sub  higgs_analysis_cpp.d  higgs_analysis_cpp_ACLiC_dict_rdict.pcm  input_parameters.txt  plot_systematics.py  runModel.C  run_higgs_analysis.sh
sample_database/: dataset.yaml  datasets.yaml
src/: genparticles.cxx  jets.cxx  lorentzvectors.cxx  met.cxx  pairselection.cxx  physicsobjects.cxx  quantities.cxx  reweighting.cxx  scalefactors.cxx  topreco.cxx  triggers.cxx  tripleselection.cxx
test/: DNN_Value.root  Xtohh100.root  check.cpp  et_test.h5  et_test.hxx  generate_model.cpp  higgs_analysis.cpp  higgs_analysis_cpp.d  higgs_analysis_cpp_ACLiC_dict_rdict.pcm  output_test.txt  output_test_sorted.txt  run_higgs_analysis.sh  test.root  test_mt.root  test_mt_latest.root  testoutput.root  tt_even_lowmass.h5  tt_even_lowmass.hxx
(+69 files in other folders)
